# jabbariao.com-core

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
jabbariao_me_core/: asgi.py  urls.py  wsgi.py
jabbariao_me_core/apps/posts/: api.py  mixins.py  models.py  serializers.py
jabbariao_me_core/apps/posts/migrations/: 0001_initial.py  0002_tag.py  0003_alter_post_created.py  0004_auto_20210822_2016.py  0005_remove_tag_posts.py  0006_tag_posts.py  0007_comment.py
jabbariao_me_core/settings/: __init__.py  common.py  develop.py  utils.py
