[tool.poetry]
name = "jabbariao-me-core"
version = "0.1.0"
description = ""
authors = ["Jaime Abbariao <jaimeabbariao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
psycopg2 = "^2.9.1"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
